Replace Asciidoctor with Antora (!1423)